--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,8 @@ php:
   - 5.4
   - 5.5
   - 5.6
-  - hhvm
-  - nightly
+  #- hhvm
+  #- nightly
+before_install:
+  - sudo apt-get update -qq
+  - sudo apt-get install -y ctorrent
